--- a/backEnd/.env
+++ b/backEnd/.env
@@ -1,9 +1,3 @@
-# DB_HOST=localhost
-# DB_USER=root
-# DB_PASSWORD=ssss
-# DB_NAME=restaurant_db
-# PORT=3000
-
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=ssss
@@ -13,5 +7,9 @@ DB_PORT=3306
 PORT=3000
 
 #JWT_CREDENTIAL
-ACCESS_TOKEN_SECRET = Access_Token_Secret_#$%_ExpressJS_Authentication
-ACCESS_TOKEN_LIFE = 10m
+ACCESS_TOKEN_SECRET=Access_Token_Secret_#$%_ExpressJS_Authentication
+ACCESS_TOKEN_LIFE=60m
+
+REFRESH_TOKEN_SECRET=Refresh_Token_Secret_#$%_ExpressJS_Authentication
+REFRESH_TOKEN_LIFE=150d
+REFRESH_TOKEN_SIZE=60
