--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -15,8 +15,11 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mysql2": "^3.11.3",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.11.4",
     "nodemon": "^3.1.7",
-    "sequelize": "^6.37.5"
+    "rand-token": "^1.0.1",
+    "sequelize": "^6.37.5",
+    "sequelize-auto": "^0.8.8"
   }
 }
