--- a/backEnd/.env
+++ b/backEnd/.env
@@ -13,3 +13,5 @@ ACCESS_TOKEN_LIFE=60m
 REFRESH_TOKEN_SECRET=Refresh_Token_Secret_#$%_ExpressJS_Authentication
 REFRESH_TOKEN_LIFE=150d
 REFRESH_TOKEN_SIZE=60
+
+END_TIME_OFFSET_MINUTES=120
