--- a/backEnd/.env
+++ b/backEnd/.env
@@ -1,10 +1,12 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=ssss
+DB_PASSWORD=
 DB_NAME=test01
 DB_DIALECT=mysql
 DB_PORT=3306
 PORT=8080
+; DB_NAME=web39
+; DB_PASSWORD=
 
 # DB_HOST=bteo92sl6hqzh7gtnxhn-mysql.services.clever-cloud.com
 # DB_USER=ujwnga9sz5apefjs
