--- a/backEnd/.env
+++ b/backEnd/.env
@@ -1,7 +1,7 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=
-DB_NAME=test01
+DB_PASSWORD=ssss
+DB_NAME=test02
 DB_DIALECT=mysql
 DB_PORT=3306
 PORT=8080
