--- a/backEnd/.env
+++ b/backEnd/.env
@@ -1,10 +1,10 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=ssss
-DB_NAME=test01
+DB_PASSWORD=
+DB_NAME=test
 DB_DIALECT=mysql
 DB_PORT=3306
-PORT=3000
+PORT=5000
 
 #JWT_CREDENTIAL
 ACCESS_TOKEN_SECRET=Access_Token_Secret_#$%_ExpressJS_Authentication
