--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "backend-main": "file:",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
@@ -21,5 +23,8 @@
     "rand-token": "^1.0.1",
     "sequelize": "^6.37.5",
     "sequelize-auto": "^0.8.8"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.2"
   }
 }
