--- a/backEnd/config/config.json
+++ b/backEnd/config/config.json
@@ -1,15 +1,12 @@
 {
   "development": {
     "username": "root",
-    "password": null,
+    "password": "",
     "database": "test",
     "host": "127.0.0.1",
     "dialect": "mysql",
-    "logging": false,
-    "query": {
-      "raw": true
-    },
-    "timezone": "+07:00"
+    "charset": "utf8mb4",           
+    "collate": "utf8mb4_unicode_ci"
   },
   "test": {
     "username": "root",
