--- a/backEnd/.env
+++ b/backEnd/.env
@@ -7,6 +7,7 @@ DB_PORT=3306
 PORT=5000
 
 #JWT_CREDENTIAL
+JWT_SECRET=HELLO_WORLD
 ACCESS_TOKEN_SECRET=Access_Token_Secret_#$%_ExpressJS_Authentication
 ACCESS_TOKEN_LIFE=60m
 
