--- a/backEnd/.env
+++ b/backEnd/.env
@@ -1,10 +1,10 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=
-DB_NAME=test
+DB_PASSWORD=ssss
+DB_NAME=test02
 DB_DIALECT=mysql
 DB_PORT=3306
-PORT=5000
+PORT=8080
 
 #JWT_CREDENTIAL
 JWT_SECRET=HELLO_WORLD
