--- a/backEnd/config/config.json
+++ b/backEnd/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": "",
-    "database": "test",
+    "password": "ssss",
+    "database": "test02",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "dialectOptions": {
