--- a/backEnd/.env
+++ b/backEnd/.env
@@ -15,4 +15,7 @@ REFRESH_TOKEN_SECRET=Refresh_Token_Secret_#$%_ExpressJS_Authentication
 REFRESH_TOKEN_LIFE=150d
 REFRESH_TOKEN_SIZE=60
 
+EMAIL_USER=vvthang.demo@gmail.com
+EMAIL_PASS=axsiqakniqjiiqfi
+
 END_TIME_OFFSET_MINUTES=120
