--- a/backEnd/.env
+++ b/backEnd/.env
@@ -16,3 +16,6 @@ REFRESH_TOKEN_LIFE=150d
 REFRESH_TOKEN_SIZE=60
 
 END_TIME_OFFSET_MINUTES=120
+
+EMAIL_USER=vvthang.demo@gmail.com
+EMAIL_PASS=axsiqakniqjiiqfi
